embedded_files/constraint_template.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: requiretags
spec:
  crd:
    spec:
      names:
        kind: RequireTags
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requiretags
        violation[{"msg": msg, "details": {}}]{
          input.review.kind.kind == "Pod"
          image := input.review.object.spec.containers[_].image
          ensure(image)
          msg := sprintf("Pod %v could not be created because it uses images that are tagged latest or images with no tags", [input.review.object.metadata.name])
        }
        
        ensure(image) {
          contains(image, ":latest")
        }
        ensure(image) {
          not contains(image,":")
        }
